--- a/src/styles.css
+++ b/src/styles.css
@@ -174,7 +174,7 @@ th,td {
   box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
   display: none;
   z-index: 1001;
-  width: 400px;
+  width: 500px;
   max-width: 90%;
 }
 
@@ -190,7 +190,8 @@ th,td {
 
 /* 保存ボタンのスタイル */
 #saveAccessTokenBtn {
-  padding: 12px 24px;
+  padding: 5px 20px;
+  margin: 2px;
   background-color: #27ae60;
   color: white;
   border: none;
@@ -210,4 +211,36 @@ th,td {
 .settings-button-container {
   text-align: center;
   margin-bottom: 20px;
+}
+
+#settings-dialog a {
+  display: inline-block;
+  padding: 10px 20px;
+  background-color: #3498db;
+  color: white;
+  text-decoration: none;
+  border-radius: 4px;
+  font-size: 16px;
+  transition: background-color 0.3s, transform 0.3s;
+}
+
+#settings-dialog a:hover {
+  background-color: #2980b9;
+  transform: translateY(-2px);
+}
+
+#settings-explain {
+  color: black;
+  font-weight: bold;
+  margin: 20px;
+  font-size: 14px;
+  line-height: 1.2;
+}
+
+#settings-explain a{
+  background-color: #90a1ad;
+  color: black;
+  font-weight: bold;
+  font-size: 12px;
+  line-height: 1.2;
 }
